--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@ body {
 .container	{
 	border: 2px solidы green;
 	padding: 0 auto;
-	margin: 0 30%;
+	margin: 0 auto;
 	max-width: 1200px;
+	padding-bottom: 10px;
 }
-
-
 
 .fig {
 	display: block; 
@@ -26,18 +25,47 @@ body {
 }
 
 .fig p {
-	margin-top: 0;
+	margin: 0;
+}
+span {
+	color: red;	
 }
 
 .inst_href{
 	text-align: center;
 }
 
+
+
 p {
+	margin: 0;
 	text-align: center;
 	font-size: 20px;
 	font-weight: 400;
 }
+
+ul {
+	padding-left: 10px;
+}
+
+ul li {
+	list-style-type: none;
+	padding-top: 5px;
+}
+.first_fix {
+	padding-top: 0;
+
+}
+
+.center {
+	text-align: center;
+}
+
+.second {
+	padding-top: 15px;
+	padding-left: 0;
+}
+
 
 .button{
 	background-color: #fcc2d7;
@@ -47,13 +75,20 @@ p {
 	display: block;
 	text-align: center;
 	border-radius: 10px;
+	margin: 0 30%;
 }
+
+
 
 .button img {
 	padding-right: 5px;
 	width: 25px;
 	height: 25px;
 	vertical-align: middle;
+}
+
+.button:hover {
+	background-color: #ff2ec7;
 }
 
 .button a {
@@ -94,23 +129,30 @@ hr.style-eight:after {
 @media (max-width:1200px) {
 	.container	{
 		max-width: 970px;
-		margin: 0 25%;
+		margin: 0 1%;
+	}
+	.haed_title {
+		
 	}
 }
 
 @media (max-width:992px) {
 	.container	{
 		max-width: 750px;
-		margin: 0 20%;
+		margin: 0 1%;
 	}
+	.
 }
 
 @media (max-width:767px) {
 	.container	{
 		max-width: none;
-		margin: 0 4%;
+		margin: 0 1%;
 	}
 	p {
 		font-size: 16px;
+	}
+	.button {
+		margin: 0 auto;
 	}
 }
