--- a/Consultation.css
+++ b/Consultation.css
@@ -10,6 +10,8 @@ body {
 	padding: 0 auto;
 	margin: 0 auto;
 	max-width: 1200px;
+	margin-top: 15%;
+	padding-bottom: 10px;
 }
 
 
@@ -113,20 +115,23 @@ hr.style-eight:after {
 @media (max-width:1200px) {
 	.container	{
 		max-width: 970px;
-		
+		margin: 0 1%;
 	}
+	
 }
 
-@media (max-width:1024px) {
+@media (max-width:992px) {
 	.container	{
 		max-width: 750px;
-		margin-top: 15%;
+		margin: 0 1%;
 	}
+	.
 }
 
 @media (max-width:767px) {
 	.container	{
 		max-width: none;
+		margin: 0 1%;
 	}
 	p {
 		font-size: 16px;
