--- a/Consultation.css
+++ b/Consultation.css
@@ -10,7 +10,6 @@ body {
 	padding: 0 auto;
 	margin: 0 auto;
 	max-width: 1200px;
-	margin-top: 15%;
 	padding-bottom: 10px;
 }
 
@@ -137,6 +136,6 @@ hr.style-eight:after {
 		font-size: 16px;
 	}
 	.button {
-		margin: 0 auto;
+		margin: 0 1%;
 	}
 }
